# nvim-nix

./: .envrc  .gitignore  AGENTS.md  Makefile  README.md  cachit.sh  flake.nix  justfile
.forgejo/workflows/: update.yml
.serena/: project.yml
nix/: ai.nix  autocomplete.nix  avante.nix  blink-pairs.nix  differ.nix  integration.nix  juan-logs.nix  kube.nix  kulala.nix  mkNeovim.nix  neovim-overlay.nix  quickfix.nix  statusline.nix  treesitter.nix  ui.nix  windows.nix  zuban.nix
nix/ai/: aider.nix  cursortab.nix  default.nix  llama.nix  miniuet.nix  opencode.nix
nix/integration/: default.nix
nix/lang/: default.nix  go.nix  http.nix  js.nix  lua.nix  nix.nix  python.nix  rust.nix  sql.nix  unsorted.nix
nvim/: filetype.lua  init.lua
nvim/colors/: ex-bamboo-light.lua  ex-bamboo.lua  ex-bluloco.lua  ex-pustota.lua
nvim/lsp/: basedpyright.lua  basedpyright.lua.disabled  biome.lua  clangd.lua  cssls.lua  docker_language_server.lua.disabled  golangci_lint_ls.lua  gopls.lua  html.lua  jinja_lsp.lua  jsonls.lua  lua_ls.lua  rust_analyzer.lua  sqruff.lua  (+4 more)
plugins/rag.nvim/rag-rust/: Cargo.toml  README.md
plugins/rag.nvim/rag-rust/src/: c_api.rs  cache.rs  config.rs  database.rs  embedding.rs  index.rs  lib.rs  models.rs
plugins/rag.nvim/rag-rust/tests/: embedding_tests.rs
tests/: a.c  a.cu  airun.http  barrier.go  colorschema.py  div.json.py  docker-compose.yaml  download.py  env.sh  events.json  example.http  examplealign.txt  fib.py  html.html  inject.html  inject.py  ollama.http  rust.rs  simple.html.jinja  simple.sql  t.js  test.lua  test.ts  test.xml
(+126 files in other folders)
