[package]
name = "rag-nvim"
version = "1.0.0"
edition = "2021"

[lib]
name = "rag"
crate-type = ["cdylib", "rlib"]

[dependencies]
sqlite-vec = "0.1.8"
rusqlite = { version = "0.32", features = ["bundled", "blob"] }
zerocopy = "0.8.48"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
lazy_static = "1.4"
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
ureq = { version = "3.3.0", features = ["rustls", "json"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
